Update simplest template

--- a/template/index.html.erb
+++ b/template/index.html.erb
@@ -10,4 +10,12 @@
       "atom": <%= @stats[:atom] %>
     }
   </script>
+  <body>
+    <h1>VSCode</h1>
+    <p><%= @stats[:vscode] %></p>
+    <h1>Sublime</h1>
+    <p><%= @stats[:sublime] %></p>
+    <h1>Atom</h1>
+    <p><%= @stats[:atom] %></p>
+  </body>
 </html>
