--- a/template/index.html.erb
+++ b/template/index.html.erb
@@ -1,5 +1,7 @@
 <html>
   <meta charset="utf-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
   <head>
     <title>VSCode vs Sublime vs Atom packages count</title>
     <script src="https://d3js.org/d3.v3.min.js"></script>
